k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nurds-insights-auth
  namespace: nurds-insights
spec:
  forwardAuth:
    address: http://ak-outpost-authentik-embedded-outpost.nurds-id:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nurds-insights-headers
  namespace: nurds-insights
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: strict-origin-when-cross-origin
    customResponseHeaders:
      X-Robots-Tag: noindex, nofollow
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nurds-insights
  namespace: nurds-insights
  labels:
    app.kubernetes.io/name: nurds-insights
spec:
  entryPoints: [web]
  routes:
    - kind: Rule
      match: "Host(`insights.nurds.dev`)"
      priority: 200
      middlewares:
        - name: nurds-insights-auth
        - name: nurds-insights-headers
      services:
        - name: nurds-insights
          port: 80
